--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "description": "A basic Google search engine",
   "scripts": {
+    "start": "concurrently 'webpack-dev-server' 'babel . --extensions \".ts\" --ignore client,dist,node_modules --out-dir dist -s --watch' 'micro-dev -p 3000 dist/api.js' ",
     "test": "tsc && jest"
   },
   "author": "Steve Farthing",
@@ -9,22 +10,41 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/cheerio": "^0.22.16",
     "@types/jest": "^25.1.4",
+    "@types/micro": "^7.3.3",
+    "@types/nedb": "^1.8.9",
     "@types/node": "^13.9.1",
     "@types/node-fetch": "^2.5.5",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "babel-loader": "^8.0.6",
+    "concurrently": "^5.1.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
+    "micro-dev": "^3.0.0",
     "nock": "^12.0.2",
     "prettier": "^1.19.1",
+    "style-loader": "^1.1.3",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "combine-async-iterators": "^1.1.2",
+    "core-js": "^3.6.4",
+    "decoders": "^1.18.1",
+    "micro": "^9.3.4",
+    "minireset.css": "0.0.6",
+    "nedb": "^1.8.0",
     "node-fetch": "^2.6.0",
-    "normalize-url": "^5.0.0"
+    "normalize-url": "^5.0.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
